# python-react

.github/: dependabot.yml
.github/workflows/: generate-client.yml  lint-backend.yml  playwright.yml  smokeshow.yml  test-backend.yml
backend/: Dockerfile  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/client/: schemas.gen.ts
frontend/src/components/UserSettings/: Appearance.tsx
